--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: top; 
-margin-top: 30px;
+margin-top: 20px;
     padding-right: clamp(10px, 3vw, 20px); /* Responsive padding */
     flex-shrink: 0;
     flex-basis: clamp(70px, 20vw, 120px); /* Give preview area a base width but allow shrinking */
@@ -153,6 +153,7 @@ margin-top: 30px;
 .pair-label {
     // font-size: clamp(0.7em, 2vw, 0.9em); /* Responsive font size */
 font-size: clamp(0.9em, 2vw, 1.1em);
+    margin-top: 15px;
     margin-bottom: 5px;
     // color: #555;
 }
@@ -233,6 +234,14 @@ font-size: clamp(0.9em, 2vw, 1.1em);
     margin: 0 !important;
 }
 
+.line {
+  width: 65px;
+  height: 0;
+  border: 1px solid #C4C4C4;
+  margin: 3px;
+  display:inline-block;
+}
+        
 .preview-block {
     opacity: 0.5; /* Transparent for preview */
     z-index: 5;
@@ -300,6 +309,7 @@ font-size: clamp(0.9em, 2vw, 1.1em);
                             <div class="block secondary-block" id="current-secondary"></div>
                         </div>
                     </div>
+                    <div class="line"></div>
                     <div class="pair-container next-pair-container">
                         <div class="pair-label">Next</div>
                         <div id="next-pair">
