--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
 
 .modal-content p {
     text-align: left; /* Align rules to the left for readability */
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     line-height: 1.6;
     color: #555;
 }
@@ -80,6 +80,7 @@ body {
 
 .modal-content li {
     margin-bottom: 8px;
+    line-height: 1.5;
     color: #555;
 }
 
@@ -350,7 +351,7 @@ font-size: clamp(0.9em, 2vw, 1.1em);
                 <ul>
                     <li>You'll see a pair of blocks (NOW pair) and the Next pair that will come after. The block with the '×' is the primary block.</li>
                     <li>To place blocks, click/tap on an empty cell in the playfield. This will be the position of the primary block.</li>
-                    <li>Drag your finger/mouse away from the primary block (up, down, left, or right) to position the secondary block next to it. Release to place the pair.</li>
+                    <li>Drag your finger/mouse away from the primary block (up, down, left, or right) to position the secondary block next to it.<br>Release to place the pair.</li>
                     <li>The placed blocks will fall to the lowest available position in their columns.</li>
                     <li>When 4 or more blocks of the same color are touching (not diagonally), they will clear, and you'll earn points.</li>
                     <li>Clearing multiple groups with one placement or in quick succession increases your combo for more points!</li>
