Update time space

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ body {
                     <div id="combo-area">Combo <span id="combo">0</span>x</div>
                 </div>
                 <div class="stats-row">
-                    <div id="timer-area-container" style="display: none;"> Time: <span id="time-left">0.0</span>s
+                    <div id="timer-area-container" style="display: none;">Time:&nbsp;<span id="time-left">0.0</span>s
                         <div id="time-bar-container">
                             <div id="time-bar"></div>
                         </div>
